Table customers {
    id int [primary key]
    name text [not null]
    email text [not null, unique]
    phone text
    address text
}

Table orders {
    id int [primary key]
    customer_id int [not null, ref: > customers.id]
    order_date text [not null]
    total_amount real [not null]
}

Table order_details {
    id int [primary key]
    order_id int [not null, ref: > orders.id]
    product_name text [not null]
    unit_price real [not null]
    quantity int [not null]
}
